# program_rules

./: CMakeLists.txt  README.md
documents/: abbreviations.tex  bibliography.bib  espd.cls  preamble.tex
documents/program_rules/: CMakeLists.txt  program_rules.tex
documents/program_rules/src/: аббревиатуры.tex  аннотация.tex  введение.tex  общие_сведения.tex  стиль_программирования.tex  элементы_языка.tex
